<resources>
    <string name="app_name">EventMe</string>
    <string name="title_explore">Explore</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>

    //EXPLORE
    <string name="search_hint">Search...</string>

    //PROFILE
    <string name="profile_image">Profile image</string>
    <!--    <string name="name_profile">Name</string>-->
    <string name="dob">Birthday</string>
    <string name="signin_prompt">Already have an account?</string>
    <string name="create_prompt">Are you a new user?</string>
    <string name="logo">logo</string>

    //LOGIN
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //REGISTER
    <string name="title_activity_reg">RegisterActivity</string>
    <string name="prompt_name_reg">Name</string>
    <string name="prompt_email_reg">Email</string>
    <string name="prompt_dob_reg">Birthdate (mm/dd/yyyy)</string>
    <string name="prompt_password_reg">Password</string>
    <string name="prompt_confirm_password_reg">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short_reg">Register</string>
    <string name="register_failed">"Register failed"</string>
    <string name="upcomingEvents">Registered Events</string>

    //SPINNER
    <string-array name="items">
        <item>Sports</item>
        <item>Music</item>
        <item>Food</item>
        <item>Movies</item>
    </string-array>

</resources>